# hle_play

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_vs2019_64.cmd
Source/: BGDADrawTextBlock.cpp  BGDADrawTextBlock.h  BgdaBeginTextBlock.cpp  BgdaBeginTextBlock.h  BgdaDebugBlock.cpp  BgdaDebugBlock.h  BgdaDisplayBackBufferBlock.cpp  BgdaDisplayBackBufferBlock.h  BgdaDmaQueue.cpp  BgdaDmaQueue.h  BgdaDrawColourSpriteBlock.cpp  BgdaDrawColourSpriteBlock.h  BgdaDrawModelBlock.cpp  BgdaDrawModelBlock.h  BgdaDrawObjectBlock.cpp  BgdaDrawObjectBlock.h  BgdaDrawSpriteBlock.cpp  BgdaDrawSpriteBlock.h  BgdaEeExecutor.cpp  BgdaEeExecutor.h  BgdaKickoffDmaBlock.cpp  BgdaKickoffDmaBlock.h  BgdaMatrixRoutines.cpp  BgdaMatrixRoutines.h  BgdaMpegBlock.cpp  BgdaMpegBlock.h  BgdaSetTextColourBlock.cpp  BgdaSetTextColourBlock.h  CMakeLists.txt  GSH_HleOgl.cpp  GSH_HleOgl.h  HleMainWindow.cpp  HleMainWindow.h  HleVMUtils.h  Main.cpp  NopBlock.h  bgdaContext.h
Source/fx/: main.fx
Source/gs/: GSH_Hle.h  GSH_HleSoftware.cpp  GSH_HleSoftware.h
Source/ui_qt/: main.cpp  mainwindow.cpp
Source/ui_win32/: GSH_HleOglWin32.cpp  GSH_HleOglWin32.h  HleRendererSettingsWnd.cpp  HleRendererSettingsWnd.h  HleRes.rc  resource.h
build_win32/: Play.sln  Play.vcxproj  hle_play.vcxproj  hle_play.vcxproj.filters
